<!-- SPDX-License-Identifier: Apache-2.0 and MIT -->
<!-- Copyright 2015-2023 Christoph Zengler       -->
<!-- Copyright 2023-20xx BooleWorks GmbH         -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.booleworks</groupId>
  <artifactId>logicng</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>LogicNG</name>
  <description>The Next Generation Logic Library</description>
  <url>https://www.logicng.org</url>

  <modules>
    <module>core</module>
    <module>parser</module>
    <module>serialization</module>
  </modules>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://spdx.org/licenses/Apache-2.0.html</url>
    </license>
    <license>
      <name>MIT</name>
      <url>https://spdx.org/licenses/MIT.html</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>BooleWorks</id>
      <name>BooleWorks Team</name>
      <organization>BooleWorks GmbH</organization>
      <organizationUrl>https://www.booleworks.com</organizationUrl>
      <email>info@booleworks.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com:booleworks/logicng.git</connection>
    <developerConnection>scm:git:ssh://github.com:booleworks/logicng.git</developerConnection>
    <url>https://www.logicng.org</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <!-- Dependency Versions -->
    <version.junit>5.11.0</version.junit>
    <version.assertj>3.26.3</version.assertj>
    <version.mockito>5.2.0</version.mockito>
    <version.antlr>4.13.2</version.antlr>
    <version.protobuf>4.28.1</version.protobuf>

    <!-- Plugin Versions -->
    <version.javacc>3.1.0</version.javacc>
    <version.jacoco>0.8.12</version.jacoco>
    <version.coveralls>4.3.0</version.coveralls>
    <version.maven-compiler>3.13.0</version.maven-compiler>
    <version.maven-helper>3.6.0</version.maven-helper>
    <version.surefire>3.5.0</version.surefire>
    <version.nexus-staging>1.6.13</version.nexus-staging>
    <version.maven-gpg>1.6</version.maven-gpg>
    <version.osgi-plugin>5.1.9</version.osgi-plugin>
    <version.maven-source>3.3.1</version.maven-source>
    <version.maven-javadoc>3.10.0</version.maven-javadoc>
    <version.maven-jar>3.4.2</version.maven-jar>
    <version.formatter>2.24.1</version.formatter>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Parser Generation  -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>javacc-maven-plugin</artifactId>
          <version>${version.javacc}</version>
        </plugin>

        <plugin>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-maven-plugin</artifactId>
          <version>${version.antlr}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${version.maven-compiler}</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${version.maven-helper}</version>
        </plugin>

        <!-- Store POM version in application manifest and set Jigsaw module name-->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${version.maven-jar}</version>
        </plugin>

        <!-- Compile jar with sources -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${version.maven-source}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <!-- Compile jar with javadocs-->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${version.maven-javadoc}</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>net.revelc.code.formatter</groupId>
          <artifactId>formatter-maven-plugin</artifactId>
          <version>${version.formatter}</version>
          <configuration>
            <configFile>${maven.multiModuleProjectDirectory}/code-style.xml</configFile>
          </configuration>
        </plugin>

        <!-- JaCoCo (Test Coverage)-->
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${version.jacoco}</version>
        </plugin>

        <!-- Support for OSGi -->
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>${version.osgi-plugin}</version>
        </plugin>

        <!-- Coveralls.io test coverage -->
        <plugin>
          <groupId>org.eluder.coveralls</groupId>
          <artifactId>coveralls-maven-plugin</artifactId>
          <version>${version.coveralls}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <!-- ANTLR Parser -->
      <dependency>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-runtime</artifactId>
        <version>${version.antlr}</version>
      </dependency>

      <!-- Testing-->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${version.junit}</version>
      </dependency>

      <!-- Protocol Buffers -->
      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>${version.protobuf}</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${version.junit}</version>
      </dependency>

      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${version.assertj}</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${version.mockito}</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>${version.mockito}</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-inline</artifactId>
        <version>${version.mockito}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <!-- Deploy to Maven Central -->
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>${version.nexus-staging}</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>false</autoReleaseAfterClose>
            </configuration>
          </plugin>

          <!-- Sign components -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${version.maven-gpg}</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>gh-action-release</id>
      <build>
        <plugins>
          <!--Deploy to Maven Central -->
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>${version.nexus-staging}</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://s01.oss.sonatype.org/content/repositories/snapshots</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>

          <!--Sign components -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${version.maven-gpg}</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <!-- Don't stop for asking for the passphrase-->
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>

      <distributionManagement>
        <repository>
          <id>ossrh</id>
          <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
          <releases>
            <enabled>false</enabled>
          </releases>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
        </repository>
      </distributionManagement>
    </profile>

    <profile>
      <id>all-tests</id>
      <properties>
        <groups>none(),longRunning,random</groups>
      </properties>
    </profile>

    <profile>
      <id>long-running-tests</id>
      <properties>
        <groups>longRunning</groups>
      </properties>
    </profile>

    <profile>
      <id>random-tests</id>
      <properties>
        <groups>random</groups>
      </properties>
    </profile>
  </profiles>
</project>
